Renderer: Fix `embed` x overflow
Now it scrolls when appropriate

--- a/src/app.css
+++ b/src/app.css
@@ -154,7 +154,7 @@ body {
         @apply bg-theme-code-bg text-theme-code-text px-[4px] py-[2px] rounded-sm text-[calc(7/8)em];
     }
 
-    p, ol, ul, img, embed {
+    p, ol, ul, img, .embed-container {
         @apply my-4;
     }
 
@@ -176,8 +176,11 @@ body {
         }
     }
 
-    embed {
-        @apply mx-auto bg-white rounded-lg;
+    .embed-container {
+        @apply overflow-x-auto scrollbar h-fit w-full;
+        embed {
+            @apply bg-white rounded-lg mx-auto;
+        }
     }
 
     img {
